# krnl-solana

./: .env  .gitignore  Cargo.toml
src/: faas.rs  main.rs
