[package]
name = "solana-test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.0"
anyhow = "1.0.86"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.1"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18.15"
solana-sdk = "1.18.15"
